# passwordrecidive

./: .gitignore  CMakeLists.txt  README.md  main.cpp  pass.cpp  pass.h  pass.ui  recource.qrc  recurse.qrc  reset.qrc  resk.qrc  sexinstrukor.cpp  sexinstrukor.h  sexinstrukor.ui  ssa.qrc  ssr.qrc  wex.cpp  wex.h  wex.ui  zxc.cpp  zxc.h  zxc.ui
